<?xml version="1.0" encoding="utf-8"?>
<!--
    Atajos estáticos del launcher (long-press sobre el icono de la app).

    Cada atajo lanza un Intent ACTION_VIEW hacia MainActivity con un extra
    `com.vivid.app.extra.SHORTCUT_ACTION` (ver MainActivity.EXTRA_SHORTCUT_ACTION,
    del que salen las constantes SHORTCUT_*): MainActivity lo convierte en un
    ShortcutRequest y VividNavigation navega al destino, esperando a que la
    sesión FCM/Firebase esté restaurada en el arranque frío.

    Los valores de los extras NO pueden referenciar constantes Kotlin desde
    XML: mantener sincronizados con com.vivid.app.MainActivity.
-->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="vivid_new_post"
        android:enabled="true"
        android:icon="@mipmap/ic_shortcut_post"
        android:shortcutShortLabel="@string/shortcut_new_post"
        android:shortcutLongLabel="@string/shortcut_new_post">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.vivid.app"
            android:targetClass="com.vivid.app.MainActivity">
            <extra
                android:name="com.vivid.app.extra.SHORTCUT_ACTION"
                android:value="create_post" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="vivid_new_reel"
        android:enabled="true"
        android:icon="@mipmap/ic_shortcut_reel"
        android:shortcutShortLabel="@string/shortcut_new_reel"
        android:shortcutLongLabel="@string/shortcut_new_reel">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.vivid.app"
            android:targetClass="com.vivid.app.MainActivity">
            <extra
                android:name="com.vivid.app.extra.SHORTCUT_ACTION"
                android:value="create_reel" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="vivid_new_story"
        android:enabled="true"
        android:icon="@mipmap/ic_shortcut_story"
        android:shortcutShortLabel="@string/shortcut_new_story"
        android:shortcutLongLabel="@string/shortcut_new_story">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.vivid.app"
            android:targetClass="com.vivid.app.MainActivity">
            <extra
                android:name="com.vivid.app.extra.SHORTCUT_ACTION"
                android:value="create_story" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="vivid_messages"
        android:enabled="true"
        android:icon="@mipmap/ic_shortcut_messages"
        android:shortcutShortLabel="@string/shortcut_messages"
        android:shortcutLongLabel="@string/shortcut_messages">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.vivid.app"
            android:targetClass="com.vivid.app.MainActivity">
            <extra
                android:name="com.vivid.app.extra.SHORTCUT_ACTION"
                android:value="messages" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="vivid_search"
        android:enabled="true"
        android:icon="@mipmap/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search"
        android:shortcutLongLabel="@string/shortcut_search">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.vivid.app"
            android:targetClass="com.vivid.app.MainActivity">
            <extra
                android:name="com.vivid.app.extra.SHORTCUT_ACTION"
                android:value="search" />
        </intent>
    </shortcut>

</shortcuts>
